
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- Refresh modExt trees when drag operations fail
- [#4918] Limit save permission check to modified nodes in resource/sort processor
- [#5065] Fix 404 error with cross-context symlinks when cacheable
- [#5152] Fix nested non-cacheable tags from being cached in modResource->_content
- [#5145] Update config check on dashboard to show correct core path if core is moved
- [#5112] Add Settings for adjusting behavior of Context sorting in Resources tree
- [#4341] Properly clarify text and function on Resource Tree context menu options for view/preview
- [#5046] Fix issue where parent could not be changed for new resources via Form Customization
- [#5112] Sort contexts by name ascending in the Resources tree
- [#5102] Fix error removing older transport package versions
- [#4940] Fix issue where CMPs that did not use ExtJS could not scroll
- [#5097] Ensure browser toolbar button does not show when MODx.Browser is already open
- [#4953] Improve modx.console.js to avoid message loss
- [#4836] Make sure modFileRegister sorts messages before reading
- [#5087] Fix issue where class_key was not respected when using Add Another in UI
- [#3464] Set xPDOTransport::ACTION_UPGRADE for already installed packages
- [#4955] Package management actions refresh packages cache partition
- [#5071] (SqlSrv) fix/refactor Plugin Events getList processor
- [#2870] Change internalKey default value to NULL
- [#5072] Add missing primary key index to modEvent
- [#5005] Fix incorrect label on introtext field in weblink panel
- Remove session_cookie_lifetime variable when logging out of context
- Remove legacy SESSION variables and dependencies
- [#4703] Remove user settings when logging out of a Context
- [#2566] Improve tv output render url to take resource pagetitle when using resourcelist TV type