@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- Set a default session_gc_maxlifetime to avoid frequent logout issues
 - Refresh modExt trees when drag operations fail
 - [#4918] Limit save permission check to modified nodes in resource/sort processor
 - [#5065] Fix 404 error with cross-context symlinks when cacheable
